--- a/templates/parts/npc-skills.html
+++ b/templates/parts/npc-skills.html
@@ -3,7 +3,8 @@
 	<!-- Action skills -->
     {{log this}}
    {{#each (skillPointsNotZero skills) as |skill id|}}
-      <label class="skill-key rollable skill-name skill-roll" data-skill="{{id}}">{{localize (concat "skill." id ) }}</label>
+      <span class="item-span">
+      <label class="skill-key rollable skill-roll" data-skill="{{id}}">{{localize (concat "skill." id ) }}</label>
       <label style="font-weight: bold">{{skill.pool}}</label>
       <a class="item-control skill-roll" data-skill="{{id}}" title="Roll"><i class="fas fa-dice-six"></i></a>
       {{#if skill.specialization}}
@@ -17,6 +18,8 @@
          <label style="font-weight: bold">+3</label>
          <a class="item-control skill-roll" data-skill="{{id}}" data-skillspec="{{skill.expertise}}" title="Roll"><i class="fas fa-dice-six"></i></a>
          )
-      {{/if}}{{#unless @last}},&nbsp;{{/unless}}
+      {{/if}}
+      {{#unless @last}}<span>,&nbsp;</span>{{/unless}}
+      </span>
    {{/each}}
 </dd>
