--- a/templates/parts/npc-weapons.html
+++ b/templates/parts/npc-weapons.html
@@ -3,6 +3,7 @@
 	<!-- Weapons -->
 	{{#each (itemsOfWeapontype actor.items) as |item id|}}
 		<label class="item-desc" data-item-id="{{item.id}}">{{item.name}} </label>
-		<a class="item-control weapon-roll" data-item-id="{{this.id}}" data-skill="{{item.system.skill}}" data-skillSpec="{{item.system.skillSpec}}" title="Roll"><i class="fas fa-dice-six"></i></a>{{#unless @last}},&nbsp;{{/unless}}
+		<a class="item-control weapon-roll" data-item-id="{{this.id}}" data-skill="{{item.system.skill}}" data-skillSpec="{{item.system.skillSpec}}" title="Roll"><i class="fas fa-dice-six"></i></a>
+		{{#unless @last}}<span>,&nbsp;</span>{{/unless}}
 	{{/each}}
 </dd>
