--- a/templates/parts/npc_usage_sheet.html
+++ b/templates/parts/npc_usage_sheet.html
@@ -27,11 +27,11 @@
                     {{> "systems/shadowrun6-eden/templates/parts/npc-attributes-ro.html" attributes=system.attributes}}
                     <dl>
                         <dt>{{ localize 'shadowrun6.actor.initiative' }}</dt>
-                        <dd>{{system.initiative.physical.pool}} + {{system.initiative.physical.dicePool}}d6</dd>
+                        <dd><span>{{system.initiative.physical.pool}} + {{system.initiative.physical.dicePool}}d6</span></dd>
                         <dt>{{ localize 'shadowrun6.actor.initiative_astral' }}</dt>
-                        <dd>{{system.initiative.astral.pool}} + {{system.initiative.astral.dicePool}}d6</dd>
+                        <dd><span>{{system.initiative.astral.pool}} + {{system.initiative.astral.dicePool}}d6</span></dd>
                         <dt>{{ localize 'shadowrun6.actor.actions' }}</dt>
-                        <dd>1 {{ localize 'shadowrun6.actor.actions_major' }}, {{system.initiative.actions}} {{localize 'shadowrun6.actor.actions_minor'}}</dd>
+                        <dd><span>1 {{ localize 'shadowrun6.actor.actions_major' }}, {{system.initiative.actions}} {{localize 'shadowrun6.actor.actions_minor'}}</span></dd>
                         {{> "systems/shadowrun6-eden/templates/parts/npc-skills.html" skills=system.skills}}
                         {{> "systems/shadowrun6-eden/templates/parts/npc-spells.html" }}
                         {{> "systems/shadowrun6-eden/templates/parts/npc-powers.html" }}
