--- a/templates/parts/section-spells.html
+++ b/templates/parts/section-spells.html
@@ -30,7 +30,7 @@
 			</td>
 			<td class="centered">
 				{{#iff item.system.duration '==' 'sustained'}}
-				<label class="switch">
+				<label class="switch" title='{{localize "shadowrun6.section.sustained.toggle"}}'>
 					<input name="spellSustained{{id}}" type="checkbox" data-item-id="{{this.id}}" data-check="system.isSustained" {{checked item.system.isSustained}} type="checkbox" data-dtype="Boolean"/>
 						<span class="shadowrun6-slider round"></span>
 				</label>
