Improve CritterPower Action icon

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -703,7 +703,8 @@ li.folder > .folder-header .folder-name {
 }
 .action-icon label {
   font-size: 14px;
-  width: 14px;
+  line-height: 20px;
+  color: purple;
 }
 .item-desc {
   cursor: pointer;
