Show Qualities on the NPC/Critter/Spirit read only sheets

--- a/templates/parts/npc_usage_sheet.html
+++ b/templates/parts/npc_usage_sheet.html
@@ -41,6 +41,7 @@
                         {{> "systems/shadowrun6-eden/templates/parts/npc-augmentations.html" }}
                         {{> "systems/shadowrun6-eden/templates/parts/npc-gear.html" }}
                         {{> "systems/shadowrun6-eden/templates/parts/npc-critterpowers.html" }}
+                        {{> "systems/shadowrun6-eden/templates/parts/npc-qualities.html" }}
                         {{> "systems/shadowrun6-eden/templates/parts/npc-weapons.html" }}
                     </dl>
                     {{> "systems/shadowrun6-eden/templates/parts/npc-item-descriptions.html" }}
