--- a/templates/parts/vehicle-weapons.html
+++ b/templates/parts/vehicle-weapons.html
@@ -9,7 +9,7 @@
 		{{#if (or (eq item.system.type "WEAPON_FIREARMS")
 	           (or (eq item.system.type "WEAPON_SPECIAL")
 			    (or (eq item.system.type "WEAPON_CLOSE_COMBAT") (eq item.system.type "WEAPON_RANGED") ))) }}
-       <tr class="item" data-item-id="{{this.id}}"  title="{{item.system.description}}">
+       <tr class="item" data-item-id="{{this.id}}">
        	<td style="margin-right: 1rem"><button type="button" class="collapsible closed" data-item-id="{{this.id}}">+</button><label class="item-name draggable" data-uuid="{{item.uuid}}" data-skill="{{id}}">{{item.name}}</label></td>
          <td><label class="middle-column important-column">{{item.system.dmgDef}}</label></td>
          <td><label class="middle-column" >{{{attackrating item.calculated.attackRating}}}</label></td>
@@ -17,7 +17,7 @@
 			<label class="middle-column">
 				{{item.system.ammocount}} / {{item.system.ammocap}}
 			</label>
-			<a class="item-control weapon-ammo-reload" data-item-uuid="{{this.uuid}}" title=""><i class="fas fa-rotate-right"></i></a>
+			<a class="item-control weapon-ammo-reload" data-item-uuid="{{this.uuid}}"><i class="fas fa-rotate-right"></i></a>
 		</td>
          <td class="skill-pool" style="width: 3em">
          	<label class="item-pool" data-skill="engineering" data-skillspec="gunnery">{{item.system.pool}}</label>
