Change vehicles to use Matrix Initiative by default in Combat

--- a/templates/parts/vehicle-piloting.html
+++ b/templates/parts/vehicle-piloting.html
@@ -14,7 +14,7 @@
           &nbsp;
         </td>
         <td class="skill-pool" style="width: 5em;">
-          {{system.initiative.physical.pool}} + {{system.initiative.physical.dicePool}}{{localize "shadowrun6.label.d6" }}
+          {{system.initiative.matrix.pool}} + {{system.initiative.matrix.dicePool}}{{localize "shadowrun6.label.d6" }}
         </td>
         <td class="item-controls" style="width: 3em; flex-grow:2">
           &nbsp;
