--- a/templates/parts/section-bodyware.html
+++ b/templates/parts/section-bodyware.html
@@ -8,6 +8,7 @@
 <table>
 	    <thead>
 	      <tr>
+	        <th></th>
 	        <th style="text-align: left;">{{ localize 'shadowrun6.label.column.name' }}</th>
 	        <th>{{ localize 'shadowrun6.section.bodyware.column.essence' }}</th>
 	        <th>{{ localize 'shadowrun6.section.bodyware.column.capacity' }}</th>
@@ -24,11 +25,18 @@
 					      (eq item.system.type "GENETICS")
 			)))
 		}}
-		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td> <input name="bodywareName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{sr6_description item.system 'item'}}" disabled></td>
-			<td class="centered"style="width: 3em"> <input name="bodywareEssence{{id}}" type="text" value="{{item.system.essence}}" data-field="system.essence" data-type="Number" disabled></td>
+		<tr class="item list-item draggable" data-item-id="{{item.id}}" data-uuid="{{item.uuid}}">
+			<td style="margin-right: 1rem; width: 0.7em;">
+				{{#if item.system.description }}
+				<button type="button" name="collapseGear{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button>
+				{{else}}
+				<button type="button" name="collapseGear{{id}}" class="collapsible closed empty" data-item-id="{{this.id}}">+</button>
+				{{/if}}
+			</td>
+			<td style="height:20px;"> {{item.name}}</td>
+			<td class="centered"style="width: 3em">{{item.system.essence}}</td>
 			{{#if (eq item.system.type "CYBERWARE") }}
-			<td class="centered" style="width: 2em"> <input name="bodywareCapacity{{id}}" class="centered" type="text" value="{{item.system.capacity}}" data-field="system.capacity" data-type="Number" disabled></td>
+			<td class="centered" style="width: 2em">{{item.system.capacity}}</td>
 			{{else}}
 			<td class="centered"> - </td>
 			{{/if}}
@@ -36,16 +44,23 @@
 				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i class="fas fa-edit"></i></a>
 				<a class="item-control item-delete"	title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
 			</td>
-	   </tr>
+		</tr>
+       	<tr>
+			<td colspan="5">
+				<div class="collapsible-content closed" style="font-size: 0.8em;">
+					<div style="font-weight: bold;">{{ localize 'shadowrun6.item.description' }}</div>
+					<div>{{{item.enriched.description}}} &nbsp;</div>
+				</div>
+			</td>
+       	</tr>
 		{{/if}}
 	{{/if}}
 	{{/each}}
 	    <tfoot>
 	      <tr>
-	        <th style="text-align: right; font-weight:normal">{{ localize 'shadowrun6.section.bodyware.footer.total_essence' }}:</th>
+	        <th colspan="2" style="text-align: right; font-weight:normal">{{ localize 'shadowrun6.section.bodyware.footer.total_essence' }}:</th>
 	        <th style="width: 3em">{{actor.system.essence}}</th>
-	        <th></th>
-	        <th></th>
+	        <td colspan="2"></th>
 	      </tr>
 	    </tfoot>
 </table>
