--- a/templates/parts/section-rituals.html
+++ b/templates/parts/section-rituals.html
@@ -16,10 +16,10 @@
 	    </thead>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'ritual'}}
-		<tr class="item list-item" data-item-id="{{item.id}}">
-       	<td style="width:1rem"><button type="button" name="collapseRitual{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button></td>
-       	<td><input name="ritualName{{id}}" type="text" class="draggable" data-uuid="{{item.uuid}}" value="{{item.name}}" data-field="name" title="{{sr6_description item.system item.type}}" disabled></td>
-			<td class="centered" style="width: 2em"> <input name="ritualThreshold{{id}}" class="centered" type="text" value="{{item.system.threshold}}" data-field="system.threshold" data-type="Number" disabled></td>
+		<tr class="item list-item draggable" data-item-id="{{item.id}}" data-uuid="{{item.uuid}}">
+       		<td style="width:1rem"><button type="button" name="collapseRitual{{id}}" class="collapsible closed" data-item-id="{{this.id}}">+</button></td>
+       		<td>{{item.name}}</td>
+			<td class="centered" style="width: 2em">{{item.system.threshold}}</td>
 			<td class="centered">
 				<a class="item-control ritual-roll" data-type="Roll" data-uuid="{{item.uuid}}" data-item-id="{{item.id}}" title="Roll" ><i class="fas fa-dice-six"></i></a>
 				<!-- <a class="item-control skill-roll" title="Roll"  data-skill="sorcery" data-skillspec="ritual_spellcasting"  data-item-id="{{item.id}}" ><i class="fas fa-dice-six"></i></a> -->
