Add Effects section also to all NPC/Critter/Spirit/Vehicles type of Actors

--- a/templates/actor/shadowrun6-Vehicle-sheet.html
+++ b/templates/actor/shadowrun6-Vehicle-sheet.html
@@ -25,6 +25,9 @@
 		{{> "systems/shadowrun6-eden/templates/parts/section-autosoft.html"}}
 
 		{{> "systems/shadowrun6-eden/templates/parts/section-notes.html"}}
+		
+		{{!-- Effects --}}
+		{{> "systems/shadowrun6-eden/templates/parts/tab-effects.hbs" tabActive="active"}}
 
 		</div>
     </section>
