--- a/templates/parts/tab-effects.hbs
+++ b/templates/parts/tab-effects.hbs
@@ -7,7 +7,7 @@
   </div>
 
   <section
-    class='tab effects flexcol {{tab.cssClass}}'
+    class='tab effects flexcol {{tab.cssClass}} {{tabActive}}'
     data-group='primary'
     data-tab='effects'
   >
