--- a/templates/parts/section-magicbase.html
+++ b/templates/parts/section-magicbase.html
@@ -1,6 +1,6 @@
-<div class="section" style="display: flex; width:100%; min-width: 394px; border: none; background: none; padding-right: 0px; padding-top: 0px;">
+<div class="section magic-base">
    {{#if showMagic}}
-  	<div class="attributes" style="margin-bottom: 10px; margin-top:0.4rem">
+  	<div class="attributes">
    	<div class="attribute" augmented-ui="b-clip-x exe">
       	<p>{{localize "attrib.mag" }}</p>
          <span>{{system.attributes.mag.pool}}</span>
