--- a/templates/parts/section-spells.html
+++ b/templates/parts/section-spells.html
@@ -1,11 +1,11 @@
-<div class="section" style="display: inline-block; width:100%; min-width: 394px;">
- <div class="section-head">
-	<h2 class="section-title">{{ localize 'shadowrun6.section.spells.title' }}</h2>
-	<a class="item-control spell-create" title="{{localize 'shadowrun6.section.spells.add' }}">
-		<h2 class="fas fa-plus"></h2>
-	</a>
-</div>
-<table>
+<div class="section">
+	<div class="section-head">
+		<h2 class="section-title">{{ localize 'shadowrun6.section.spells.title' }}</h2>
+		<a class="item-control spell-create" title="{{localize 'shadowrun6.section.spells.add' }}">
+			<h2 class="fas fa-plus"></h2>
+		</a>
+	</div>
+	<table>
 	    <thead>
 	      <tr>
 	        <th></th>
@@ -51,5 +51,5 @@
        </tr>
 		{{/iff}}
 		{{/each}}
-</table>
+	</table>
 </div>
