--- a/templates/parts/npc_full_edit_sheet.html
+++ b/templates/parts/npc_full_edit_sheet.html
@@ -54,7 +54,7 @@
 	</nav>
 
 	{{!-- Sheet Body --}}
-	<section class="sheet-body" style="min-width: 810px">
+	<section class="sheet-body">
 
 		{{!-- Basics Tab --}}
 		<div class="tab basics" data-group="primary" data-tab="basics">
