--- a/templates/parts/section-adeptpowers.html
+++ b/templates/parts/section-adeptpowers.html
@@ -1,11 +1,11 @@
-<div class="section" style="display: inline-block;">
- <div class="section-head">
-	<h2 class="section-title">{{ localize 'shadowrun6.section.adeptpowers.title' }}</h2>
-	<a class="item-control adeptpower-create" title="{{localize 'shadowrun6.section.adeptpowers.add' }}">
-		<h2 class="fas fa-plus"></h2>
-	</a>
-</div>
-<table>
+<div class="section">
+	<div class="section-head">
+		<h2 class="section-title">{{ localize 'shadowrun6.section.adeptpowers.title' }}</h2>
+		<a class="item-control adeptpower-create" title="{{localize 'shadowrun6.section.adeptpowers.add' }}">
+			<h2 class="fas fa-plus"></h2>
+		</a>
+	</div>
+	<table>
 	    <thead>
 	      <tr>
 	        <th>{{ localize 'shadowrun6.label.column.name' }}</th>
@@ -24,5 +24,5 @@
 	   </tr>
 		{{/iff}}
 		{{/each}}
-</table>
+	</table>
 </div>
