--- a/templates/parts/section-metamagics.html
+++ b/templates/parts/section-metamagics.html
@@ -1,11 +1,11 @@
-<div class="section" style="display: inline-block; min-width: 380px; width: 90%;">
- <div class="section-head">
-	<h2 class="section-title">{{ localize 'shadowrun6.section.metamagic.title' }}</h2>
-	<a class="item-control metamagic-create" title="{{localize 'shadowrun6.section.metamagic.add' }}">
-		<h2 class="fas fa-plus"></h2>
-	</a>
-</div>
-<table>
+<div class="section">
+	<div class="section-head">
+		<h2 class="section-title">{{ localize 'shadowrun6.section.metamagic.title' }}</h2>
+		<a class="item-control metamagic-create" title="{{localize 'shadowrun6.section.metamagic.add' }}">
+			<h2 class="fas fa-plus"></h2>
+		</a>
+	</div>
+	<table>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'metamagic'}}
 		<tr class="item list-item" data-item-id="{{item.id}}">
@@ -14,8 +14,8 @@
 			<td><a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 					class="fas fa-edit"></i></a> <a class="item-control item-delete"
 				title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a></td>
-	   </tr>
+		</tr>
 		{{/iff}}
 		{{/each}}
-</table>
+	</table>
 </div>
