--- a/templates/parts/tab-magic.html
+++ b/templates/parts/tab-magic.html
@@ -1,14 +1,16 @@
-  <section>
-	  <div style="column-count: 2; margin-right: 5px; display: inline-block;">
-			{{> "systems/shadowrun6-eden/templates/parts/section-magicbase.html" showMagic=true}}
-			{{#if system.morDef.useSpells}}
-			  {{> "systems/shadowrun6-eden/templates/parts/section-spells.html"}}
-			  {{> "systems/shadowrun6-eden/templates/parts/section-rituals.html"}}
-			{{/if}}
-			{{#if system.morDef.usePowers}}
-			  {{> "systems/shadowrun6-eden/templates/parts/section-adeptpowers.html"}}
-			{{/if}}
-			{{> "systems/shadowrun6-eden/templates/parts/section-metamagics.html"}}
-			{{> "systems/shadowrun6-eden/templates/parts/section-focus.html"}}
-		</div>
-  </section>
+<section class="sr6-tab">
+	<div class="column-left">
+		{{> "systems/shadowrun6-eden/templates/parts/section-magicbase.html" showMagic=true}}
+		{{#if system.morDef.usePowers}}
+			{{> "systems/shadowrun6-eden/templates/parts/section-adeptpowers.html"}}
+		{{/if}}
+		{{#if system.morDef.useSpells}}
+			{{> "systems/shadowrun6-eden/templates/parts/section-spells.html"}}
+			{{> "systems/shadowrun6-eden/templates/parts/section-rituals.html"}}
+		{{/if}}
+	</div>
+	<div class="column-right">
+		{{> "systems/shadowrun6-eden/templates/parts/section-metamagics.html"}}
+		{{> "systems/shadowrun6-eden/templates/parts/section-focus.html"}}
+	</div>
+</section>
