Set Item Sheet width using CSS instead of defaultOptions (#170)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -759,3 +759,6 @@ body.game .shadowrun6.sheet .window-content {
     min-width: 0;                 /* guards against overflow from long content */
   }
 }
+.shadowrun6.sheet.item {
+  width: 620px;
+}
