Improve gear read only sheet

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -763,7 +763,7 @@ body.game .shadowrun6.sheet .window-content {
   width: 830px;
 }
 .shadowrun6.sheet.actor.npc {
-  
+  width: 830px;
 }
 .shadowrun6.sheet.actor.vehicle {
   width: 640px;
